<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclrs_demo</name>
  <version>0.0.1</version>
  <description>Package to test rclrs features.</description>
  <maintainer email="santiago.lopez@ekumenlabs.com">Santiago Lopez</maintainer>
  <license>Apache License 2.0</license>


  <depend>rclrs</depend>
  <depend>rosidl_runtime_rs</depend>
  <!-- <depend>common_interfaces</depend> -->
  <!-- <depend>builtin_interfaces</depend> -->
  <!-- <depend>rcl_interfaces</depend> -->
  <depend>sensor_msgs</depend>

  <depend>rerun</depend>
  <depend>ros_pointcloud2</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
